<resources>
    <string name="app_name">QuizTacToe</string>
    <string name="draw">It\'s a draw</string>
    <string name="winner">Winner is:</string>
    <string name="about">About</string>
    <string name="currently_playing">Currently playing:</string>
    <string name="category_name">%1$s (%2$s)</string>
    <string name="continue_game">Continue game(%1$s)</string>
    <string name="now_playing">Now playing: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_info">You can login with your default name or you can pick any name you want just for this app.Your name will be used in scoreboard ladders and other in-app locations</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="your_name">Your name</string>
    <string name="start_playing">Start playing</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="error_cell_occupied">Cell is occupied!</string>
    <string name="local_game">Local game</string>
    <string name="about_info_1">First of all, thank You for downloading this app! I hope you\'ll enjoy it.</string>
    <string name="about_info_2">What\'s this all about?</string>
    <string name="about_info_3">If you like quiz games but You are missing a bit of strategy and competitiveness this is a game for You.</string>
    <string name="about_info_4">I mixed a classic quiz set up with Tic Tac Toe game and here we go.</string>
    <string name="about_info_5">Enjoy!</string>
    <string name="exit">Exit</string>
    <string name="play_game">Play game</string>
    <string name="enter_number_of_columns">Enter number of columns (3 – 6)</string>
    <string name="enter_number_of_rows">Enter number of rows (3 – 6)</string>
    <string name="player_2_name_o">Player 2 name (O)</string>
    <string name="player_1_name_x">Player 1 name (X)</string>
    <string name="set_up_your_game">Set up your game</string>
    <string name="about_title">About QuizTacToe</string>
    <string name="error_between_3_6">Must be between 3 and 6 and not empty</string>
    <string name="play_again">Play again?</string>
    <string name="there_was_and_error_please_try_again">There was and error please try again.</string>
    <string name="retry">Retry</string>
    <string name="back_to_game">Back to game</string>
    <string name="choose_your_category">Choose your category</string>
</resources>
