<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pacific_dream">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_toolbar_back"
        app:title="@string/about_title"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_5"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>