<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pacific_dream"
    android:orientation="vertical"
    tools:context=".menu.MenuActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nikola Tesla"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/local_game_btn"
        style="@style/ButtonMenu"
        android:text="@string/local_game"
        app:icon="@drawable/ic_local_game"
        app:iconSize="22dp"
        app:iconGravity="textStart"
        app:iconPadding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_45p_horizontal">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_btn"
        style="@style/ButtonMenu"
        android:text="@string/about"
        app:icon="@drawable/ic_about"
        app:iconSize="20dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_game_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_btn"
        style="@style/ButtonMenu"
        android:text="@string/exit"
        app:icon="@drawable/ic_exit"
        app:iconSize="20dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_45p_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>
